[package]
name = "stock_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.2"
scylla = "0.3"
tokio-tungstenite = "0.15"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
